--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-lb.py is Link-Backup. To see help, run "python lb.py" from the command line.
+lb.py is link-backup. To see help, run "python lb.py" from the command line.
+
+viewlb.cgi is a cgi viewer for link-backup. Load it into an editor to see
+configuration help at the top of the file.
